deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nationalparks # ArgoCDのアプリケーション名
  namespace: cd-demo # OpenShiftのプロジェクト名
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nationalparks # ArgoCDのアプリケーション名
  template:
    metadata:
      labels:
        app: nationalparks # ArgoCDのアプリケーション名
    spec:
      containers:
        - name: nationalparks # ArgoCDのアプリケーション名
          image: image-registry.openshift-image-registry.svc:5000/cd-demo/nationalparks:latest # OpenShiftのイメージのパス
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
